--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>untitled</title>
+<title>color golf</title>
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <style>
 
@@ -134,7 +134,7 @@ function drawColorSlider(buckets, comp, init, reveal, cb) {
 		c[comp] = bucketTo255(buckets, x)
 		return c
 	}
-	var h = 60
+	var h = 50
 	var d = $('<div style="width:100%;height:' + h + 'px;"/>')
 
 	function drawCells(highlight) {
@@ -199,19 +199,28 @@ function drawState(state) {
 	}
 
 	if (state.strokes.length == state.maxHoles + 1) {
+		var score = _.sum(state.strokes)
+
 		var d = $('<div style="width:100%;height:100%;text-align:left"/>')
 		function text(t) {
 			d.append($('<div/>').html(t))
 		}
-		text('<span style="font-size:large;font-weight:bold;">final score: ' + _.sum(state.strokes) + '</span>')
+		text('<span style="font-size:large;font-weight:bold;">color golf — final score of ' + score + '</span>')
 		d.append($('<div style="width:1px;height:10px"/>').html('&nbsp;'))
 
 		_.each(state.strokes, function (s, i) {
 			if (s > 0) text('<span style="color:' + colorToCss(state.colors[i]) + '">●</span> color ' + (i + 1) + ' took ' + s + ' ' + (s == 1 ? 'try!' : 'tries'))
 		})
 
-		d.append($('<div style="width:1px;height:10px"/>').html('&nbsp;'))
+		d.append($('<div style="width:1px;height:20px"/>').html('&nbsp;'))
+		d.append($('<div style="margin-bottom:5px"/>').text('let people know how you did:'))
+		d.append(drawShareButtons('I scored ' + score + ' in color golf!', location.href, function (type) {
+			track(' shared by ' + type)
+		}))
+
+		d.append($('<div style="width:1px;height:20px"/>').html('&nbsp;'))
 		d.append(drawButton('play again', function () {
+			track(' played again')
 			g_div.empty().append(drawState(createState()))
 		}).css('margin-top', '0px'))
 
@@ -220,12 +229,13 @@ function drawState(state) {
 
 	var flagColor = state.colors[state.colors.length - 1]
 	var yards = getYards(flagColor, state.ballColor, state.colorBuckets)
+	var hole = state.strokes.length
 	var stroke = state.strokes[state.strokes.length - 1]
 	var strokeText = ['first', 'second', 'third', 'fourth', 'fifth', 'sixth'][stroke]
 	var fail = yards != 0 && strokeText == undefined
 	var done = yards == 0 || fail
 
-	var info = _.splitHorz(.5, .5, center($('<div/>').text('your color')), center($('<div/>').text('goal color, ' + state.strokes.length + ' of ' + state.maxHoles)))
+	var info = _.splitVert(2, 2, center($('<div style="font-size:large;font-weight:bold;margin-bottom:10px"/>').text('color golf — round ' + hole + ' of ' + state.maxHoles)), _.splitHorz(.5, .5, center($('<div/>').text('your color')), center($('<div/>').text('goal color'))))
 
 	var ball = _.splitVert(1, 2, $('<div style="width:100%;height:100%;border-radius:15px;background:' + colorToCss(state.ballColor) + '">'), center($('<div/>').text(!done ? strokeText + ' try' : fail ? 'nice try' : 'woot!')))
 
@@ -293,6 +303,16 @@ function stateSwing(state) {
 	state.swingColor = state.ballColor.slice(0)
 }
 
+function track(tag) {
+	$.ajax({
+	    url : 'http://view-count.herokuapp.com/view/' +
+	        encodeURIComponent(location.href + (tag || '')),
+	    xhrFields : { withCredentials: true },
+	    success : function (count) {
+	    }
+	})   	
+}
+
 $(function () {
 	if ($(window).width() > 700) {
 		$('body').append($('<a href="https://github.com/dglittle/color-golf"><img width="64px" style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>'))
@@ -309,13 +329,7 @@ $(function () {
 	onResize()
 	$(window).resize(onResize)
 
-	$.ajax({
-	    url : 'http://view-count.herokuapp.com/view/' +
-	        encodeURIComponent(location.href),
-	    xhrFields : { withCredentials: true },
-	    success : function (count) {
-	    }
-	})   	
+	track()
 })
 
 </script>
