--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ function drawState(state) {
 			})
 		}
 	} else {
-		var instructions = 'choose shades to mix above'
+		var instructions = 'pick shades of red green and blue'
 		var swingButton = drawButton(instructions, function () {
 			stateSwing(state)
 			g_div.empty().append(drawState(state))
