--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ th, td {
 }
 
 </style>
+<link rel="image_src" href="logo.png" />
 </head>
 <body>
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
