--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ th, td {
 }
 
 </style>
+<link rel="shortcut icon" href="favicon.png" sizes="256x256">
 <link rel="image_src" href="http://dglittle.github.io/color-golf/logo.png" />
 </head>
 <body>
